[project]
name = "comfyui-scaletotargetmegapixels"
description = "NODES:ScaleToTargetMegapixels."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/troyxmccall/ComfyUI-ScaleToTargetMegapixels"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ScaleToTargetMegapixels"
Icon = ""
